# DIG

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  USER_GUIDE.md  mkdocs.yml  pyproject.toml  synthetic_e2e.py  test.qgs  test_numpy.rs  test_pyvista.py  test_qgis_gen.py  test_stolt.py  test_stolt_vec.py  test_update_qgis.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
dig/: __init__.py  __main__.py
dig-core/: Cargo.toml
dig-core/benches/: processing_benches.rs
dig-core/src/: lib.rs
dig-core/src/dsp/: filter.rs  migration.rs  mod.rs
dig-core/src/io/: memmap.rs  mod.rs
dig-core/src/parser/: dt1.rs  dzt.rs  magnetometry.rs  mod.rs  segy.rs
dig-core/src/types/: mod.rs  survey.rs
dig/core/: __init__.py  types.py
dig/export/: __init__.py  csv_export.py  geojson.py  geotiff.py  qgis.py
dig/models/: __init__.py  audit.py  grid.py  magnetometry_grid.py  profile.py  survey.py
dig/parsers/: __init__.py  dt1.py  dzt.py  magnetometry.py  segy.py
dig/processing/: __init__.py  assembly.py  background.py  bandpass.py  batch.py  detection.py  dewow.py  gain.py  magnetometry.py  migration.py  pipeline.py  time_zero.py  topography.py
dig/tests/: test_models.py
dig/viz/: __init__.py  colormaps.py  controls.py  history_panel.py  (+5 more)
docs/: export-guide.md  formats.md  getting-started.md  index.md  magnetometry-guide.md  more-free-tools.md  performance.md  processing-guide.md  processing-reference.md  scope.md
packaging/: dig.spec
schemas/: geophysical-anomaly-v1.json  processing-recipe-v1.json  survey-metadata-v1.json
site/: 404.html  index.html  objects.inv
test_out/: project.qgs  raster1.tif  raster2.tif
(+33 files in other folders)
