[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "dig"
version = "0.1.0"
description = "Digital Imaging for Geophysics — GPR and magnetometry processing suite"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Marcus Quinn" },
]
readme = "README.md"

dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "rasterio>=1.4",
    "pyproj>=3.7",
    "xarray>=2024.0",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "pyvista>=0.44",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
gpu = [
    "cupy>=13.0",
    "numba>=0.60",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dig.core.dig_core"
manifest-path = "dig-core/Cargo.toml"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["dig/tests"]
python_files = ["test_*.py"]